--- a/artist.html
+++ b/artist.html
@@ -40,7 +40,7 @@
 			<li class="dropdown-submenu" id="m4">
 				<a href="#" id="head_m4" class="setDisplay">ARTIST</a>
 				<ul class="dropdown-menu innerMenu">
-					<li id="a_menu1" class="green clickMenu">เฉลิมชัย <br>โฆษิตพิพัฒน์</li>
+					<li id="a_menu1" class="green clickMenu">เฉลิมชัย โฆษิตพิพัฒน์</li>
 					<li id="a_menu2">ประหยัด พงษ์ดำ</li>
 					<li id="a_menu3">ปรีชา เถาทอง</li>
 					<li id="a_menu4">พิชัย นิรันต์</li>
