--- a/media.html
+++ b/media.html
@@ -36,7 +36,7 @@
 			<li class="dropdown-submenu" id="m3" >
 				<a href="#" id="head_m3" class="setDisplay">MEDIA</a>
 				<ul class="dropdown-menu innerMenu">
-					<li id="m_menu1" class="darkOrange clickMenu">พระมหาชนก<br>ฉบับตีพิมพ์</li>
+					<li id="m_menu1" class="darkOrange clickMenu">พระมหาชนกฉบับตีพิมพ์</li>
 					<li id="m_menu2">หนังสือการ์ตูน<br>พระมหาชนก</li>
 					<li id="m_menu3">แอนิเมชั่น<br>พระมหาชนก</li>
 				</ul>
