--- a/history.html
+++ b/history.html
@@ -74,7 +74,7 @@
 			</div>
 		</div>
 
-		<div class="h-section reverse paragraph" id="sec_2">
+		<div class="h-section reverse small paragraph" id="sec_2">
 			<div class="img-left">
 				<img src="img/history/2.jpg" class="h_imgContent">
 			</div>
