--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div id="caption">
 					<p id="captionText"></p>
 				</div>
-				<button id="btn">Read more</button>
+				<button id="btn"><a id="abtn" href="#" style="color: white;">Read more</a></button>
 			</div>
 			
 		</div>
