--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 			</div>
 			<div id="listMenu">
 				<ul class="innerMenu-home darkGreen Winter">
-					<li id="m_story" class="h_menu" style="font-size: 25pt;">STORY</li>
-					<li id="m_history" class="h_menu" style="font-size: 25pt;">HISTORY</li>
-					<li id="m_media" class="h_menu" style="font-size: 25pt;">MEDIA</li>
-					<li id="m_artist" class="h_menu" style="font-size: 25pt;">ARTIST</li>
+					<li id="m_story" class="h_menu">STORY</li>
+					<li id="m_history" class="h_menu">HISTORY</li>
+					<li id="m_media" class="h_menu">MEDIA</li>
+					<li id="m_artist" class="h_menu">ARTIST</li>
 				</ul>
 				<div id="caption">
 					<p id="captionText"></p>
