--- a/history.html
+++ b/history.html
@@ -155,7 +155,7 @@
 		</div>
 	</div>
 
-	<div class="h-content setDisplay animate" id="h_content2">
+	<div class="h-content1 setDisplay animate" id="h_content2">
 		<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">ประวัติความเป็นมาของพระราชนิพนธ์พระมหาชนก</p>
 		<div class="h-section" id="sec_0">
 			<div class="img-left">
