--- a/index.html
+++ b/index.html
@@ -32,10 +32,17 @@
 				<div id="caption">
 					<p id="captionText"></p>
 				</div>
-				<button id="btn"><a id="abtn" href="#" style="color: white;">Read more</a></button>
 			</div>
-			
+			<div class="mobile-btn">
+				<button id="btn">
+					<a id="abtn" href="#" style="color: white;">Read more</a>
+				</button>
+			</div>			
 		</div>
+
+		
+		
+		
 
 		<div id="homepage" class="home-1">
 			
