--- a/media.html
+++ b/media.html
@@ -58,15 +58,16 @@
 		</a>
 	</div>
 	
-	<div class="h-content m-1 animate" id="m_content1">
-		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">พระมหาชนกฉบับตีพิมพ์</p>
+	<div class="h-content m-1 animate media-1" id="m_content1">
+		<!-- <p class="darkOrange Winter header setTextCenter setDisplay displayFlex order-2" id="media_head" style="letter-spacing: 2px;"><strong>MEDIA</strong></p><hr> -->
+		<p class="darkOrange Srinakharinwirot header displayFlex order-1 setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">พระมหาชนกฉบับตีพิมพ์</p>
 		<div class="h-section" id="sec_1">
-			<div class="img-left">
+			<div class="img-left displayFlex order-1">
 				<img src="img/media/book1.jpg" class="h_imgContent" id="h_img">
 			</div>
 			
 			
-			<div class="h-innerContent">
+			<div class="h-innerContent setTextCenter media-mobile">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					"พระมหาชนก" พระราชนิพนธ์ในพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช ได้พิมพ์เผยแพร่เป็นฉบับปกแข็งขนาด ๑๑ x ๑๑ นิ้ว บรรจุกล่องสวยงาม นอกจากเนื้อหาทรงคุณค่าแล้วยังมีภาพวาดประกอบของจิตรกรชื่อดัง ๘ คน คือ เฉลิมชัย โฆษิตพิพัฒน์, ประหยัด พงษ์ดำ, ปรีชา เถาทอง, พิชัย นิรันต์, เนติกร ชินโย, จินตนา เปี่ยมศิริ, ปัญญา วิจินธนสาร และธีระวัฒน์ คะนะมะ ผลงานจิตรกรระดับชาติถูกตีพิมพ์เป็นภาพประกอบเนื้อหา
 				</p>
@@ -82,7 +83,7 @@
 			</div>
 			
 			
-			<div class="h-innerContent">
+			<div class="h-innerContent setTextCenter">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					ปีพ.ศ.๒๕๔๒ พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช ทรงพระกรุณาโปรดเกล้าให้จัดพิมพ์พระราชนิพนธ์ เรื่องพระมหาชนกอีกครั้ง ในรูปแบบของการ์ตูนโดยมีชัย ราชวัตร เป็นผู้วาดภาพประกอบ ในสำนักพิมพ์อมรินทร์
 				</p>
@@ -98,10 +99,10 @@
 			<div class="img-left">
 				<img src="img/media/book3.jpg" class="h_imgContent" id="h_img">
 			</div>			
-			<div class="h-innerContent">
+			<div class="h-innerContent setTextCenter">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					ภาพยนตร์แอนิเมชั่น ๓ มิติ ฝีมือคนไทย "พระมหาชนก" ในพระบาทสมเด็จพระเจ้าอยู่หัวรัชกาลที่ ๙ ที่ใช้เวลาในการทำนานถึง ๔ ปี โดยมีบริษัทผู้ผลิตแอนิเมชั่นเข้าร่วมกว่า ๑๕ ราย และได้ศิลปิน นักวาด นักพัฒนาภาพเคลื่อนไหว ผู้ชำนาญการด้านแสงและเงา ผู้ชำนาญการด้านแอนิเมชั่น กว่า ๒๕๐ คน มาช่วยกันสร้างสรรค์ภาพยนตร์เรื่องนี้
-					<br><br><strong>โดยเนื้อเรื่องแบ่งออกเป็น ๓ องก์</strong><br>
+					<br><br><strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">โดยเนื้อเรื่องแบ่งออกเป็น ๓ องก์</strong><br>
 					องก์ที่ ๑ กำเนิด<br>
 					องก์ที่ ๒ ความเพียร<br>
 					องก์ที่ ๓ ปัญญา
@@ -116,7 +117,7 @@
 			</div>			
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
-					<strong>ทีมพากย์เสียงในภาพยนตร์</strong><br>
+					<strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">ทีมพากย์เสียงในภาพยนตร์</strong><br>
 					&#9733; สุเชาว์   พงษ์วิไล  พากย์เสียงพระเจ้ามหาชนก (องค์ปู่)<br>
 					&#9733; นนทรีย์  นิมิบุตร  พากย์เสียงพระอริฏฐชนก<br>
 					&#9733; ฉัตรชัย  เปล่งพานิช  พากย์เสียงพระโปลชนก<br>
@@ -210,6 +211,7 @@
 				head_m3.classList.remove("setDisplay");
 				head_m3.classList.add("darkOrange");
 				toTop.classList.remove("setDisplay");
+				// media_head.classList.remove("setDisplay");
 			}
 		}
 
@@ -223,9 +225,11 @@
 				m4.classList.add("setDisplay");
 				head_m3.classList.add("setDisplay");
 				toTop.classList.add("setDisplay");
+				// media_head.classList.add("setDisplay");
 			}else{
 				head_m3.classList.remove("setDisplay");
 				toTop.classList.remove("setDisplay");
+				// media_head.classList.remove("setDisplay");
 			}
 		}
 
