--- a/history.html
+++ b/history.html
@@ -65,14 +65,14 @@
 		</a>
 	</div>
 
-	<div class="h-content animate" id="h_content1">
+	<div class="h-content animate " id="h_content1">
 		<p class="lightOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">
 		ผลงานการประพันธ์ของพระบาทสมเด็จ<br>พระปรมินทรมหาภูมิพลอดุลยเดช</p>
 		<div class="h-section paragraph" id="sec_1">
 			<div class="img-left">
 				<img src="img/history/kingramaix2.jpg" class="h_imgContent" id="h_img">
 			</div>
-			<div class="h-innerContent">
+			<div class="h-innerContent setTextCenter">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					“นักเขียน นักประพันธ์ งานสำคัญก็คือ แสดงความคิดของตอนออกมาเป็นเรื่องชีวิต หรือเรื่องแต่งขึ้นมา เพื่อให้ผู้อื่นได้ประโยชน์ คือความรู้บ้าง บันเทิงบ้าง นักแสดงความคิดสำคัญมาก เพราะว่ามีอิทธิพลต่อชีวิตของมวลมนุษย์ อาจทำให้เกิดความคล้อยตามไปและตัวท่านเขียนดีก็ยิ่งคล้อยตามกันมาก ฉะนั้น นักประพันธ์ต้องมีความรับผิดชอบสูง เพราะท่านเป็นผู้ปั้นความคิดและความบริสุทธิ์ในความคิด จึงเป็นเรื่องที่สำคัญ ดังบทความกลั่นกรองไว้ในสมองว่า สิ่งที่จะเขียนออกมาจะไม่แสลง ไม่ทำลายความคิดของประชากร ไม่ทำลายผู้อื่น และตนเอง คือมีเสรีภาพในการเขียนอย่างเต็มที่ในขอบเขตของศีลธรรม”<br><br>
 					(พระบรมราโชวาทพระราชทานแก่คณะกรรมการสมาคมนักเขียนแห่งประเทศไทย ณ พระตำหนักจิตรลดารโหฐาน วันศุกร์ที่ ๓ พฤศจิกายน ๒๕๑๕)
@@ -84,13 +84,13 @@
 			<div class="img-left">
 				<img src="img/history/2.jpg" class="h_imgContent">
 			</div>
-			<div class="h-innerContent">
+			<div class="h-innerContent setTextCenter">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
-					<strong>“พระราชานุกิจรัชกาลที่ ๘”</strong><br>
+					<strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">“พระราชานุกิจรัชกาลที่ ๘”</strong><br>
 					กำหนดเวลาที่พระเจ้าแผ่นดินจะทรงประพฤติพระราชกิจต่างๆ ประจำทุกวันเป็นส่วนพระองค์ โดยอยู่ในกฎมณเฑียรบาล ตั้งแต่ครั้งรัชกาลสมเด็จพระบรมไตรโลกนาถ ซึ่งแสดงถึงพระปรีชาญาณด้านภาษาไทยของพระองค์ตั้งแต่ยังทรงพระเยาว์
 				</p>
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
-					<strong>“เมื่อข้าพเจ้าจากสยามมาสู่สวิตเซอร์แลนด์”</strong><br>
+					<strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">“เมื่อข้าพเจ้าจากสยามมาสู่สวิตเซอร์แลนด์”</strong><br>
 					พิมพ์ครั้งแรกในหนังสือรายเดือน วงวรรณคดี ฉบับประจำเดือนสิงหาคม พ.ศ.๒๔๙๐ เป็นบันทึกพระราชนิพนธ์ขึ้นในช่วงเวลาเสด็จพระราชดำเนินเพื่อกลับไปศึกษาต่อประเทศสวิตเซอร์แลนด์ เมื่อวันที่ ๑๙ สิงหาคม พ.ศ.๒๔๘๙ หลังจากที่ พระองค์เสด็จขึ้นครองราชย์ เมื่อวันที่ ๙ มิถุนายน พ.ศ.๒๔๘๙ โดยทรงบันทึกเป็นเรื่องราวการเดินทาง แสดงถึงความรู้สึกของพระองค์ที่ห่วงใยพสกนิกรอย่างยิ่ง รวมถึงเหตุการณ์ที่ทรงพบเจอ
 				</p>
 			</div>
@@ -101,13 +101,13 @@
 				<img src="img/history/3.jpg" class="h_imgContent">
 			</div>
 
-			<div class="h-innerContent">
+			<div class="h-innerContent setTextCenter">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
-					<strong>“นายอินทร์ผู้ปิดทองหลังพระ”</strong><br>
+					<strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">“นายอินทร์ผู้ปิดทองหลังพระ”</strong><br>
 					เป็นพระราชนิพนธ์แปลเมื่อ พ.ศ.๒๕๓๗ ต้นฉบับภาษาอังกฤษเรื่อง “A MAN CALLED INTREPID” บทประพันธ์ของ เซอร์วิลเลียม สตีเฟนสัน ใช้เวลาในการแปลถึง ๓ ปี
 				</p>
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
-					<strong>“ติโต”</strong><br>
+					<strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">“ติโต”</strong><br>
 					เป็นพระราชนิพนธ์แปลเมื่อ พ.ศ.๒๕๓๗ ต้นฉบับจากเรื่อง “TITO” ของ ฟิลลิส ออตี้ เพื่อใช้ศึกษาและเรียนรู้บุคคลที่น่าสนใจของโลกคนหนึ่ง คือ ติโต หรือรู้จักกันในนาม จอมพลติโต เดิมชื่อ โจซิบ โบรซ เป็นนายกรัฐมนตรีคอมมิวนิสต์คนแรกและประธานาธิบดีของประเทศยูโกสลาเวีย
 				</p>
 			</div>
@@ -117,13 +117,13 @@
 			<div class="img-left">
 				<img src="img/history/4.jpg" class="h_imgContent">
 			</div>
-			<div class="h-innerContent">
+			<div class="h-innerContent setTextCenter">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
-					<strong>“พระมหาชนก”</strong><br>
+					<strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">“พระมหาชนก”</strong><br>
 					ตีพิมพ์เมื่อ พ.ศ.๒๕๓๙ โดยมีทั้งภาคภาษาไทยและภาษาอังกฤษอยู่ในเล่มเดียวกัน โดยเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก ๑๐ ชาติ สุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะและตรัสรู้เป็นพระสัมมาสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกและยังทรงแปลเป็นภาษาสันสกฤตประกอบอีกภาษา
 				</p>
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
-					<strong>“ทองแดง”</strong><br>
+					<strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">“ทองแดง”</strong><br>
 					พระราชนิพนธ์เล่มนี้เป็นภาษาไทยและภาษาอังกฤษในเล่มเดียวกัน และเป็นหนังสือพระราชนิพนธ์ที่ติดอันดับขายดีที่สุดของประเทศในปี พ.ศ.๒๕๔๕ เนื้อหาหลักเป็นเรื่องความกตัญญูรู้คุณของคุณทองแดง สุนัขทรงเลี้ยง รวมถึงความจงรักภักดี ความมีมารยาท และการสั่งสอนลูกของคุณทองแดง และในพระราชนิพนธ์ได้ทรงยกย่องคุณทองแดงที่มีต่อแม่มะลิ ‘ผิดกับคนอื่นที่เมื่อกลายมาเป็นคนสำคัญแล้วมักจะลืมตัว และดูหมิ่นผู้มีพระคุณซึ่งเป็นคนต่ำต้อย’ อันเป็นประโยชน์ต่อการดำรงชีวิต
 				</p>
 			</div>
@@ -134,9 +134,9 @@
 				<img src="img/history/5.jpg" class="h_imgContent">
 			</div>
 
-			<div class="h-innerContent">
+			<div class="h-innerContent setTextCenter">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
-					<strong>“พระราชดำรัส”</strong><br>
+					<strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">“พระราชดำรัส”</strong><br>
 					ในวันที่ ๔ ธันวาคม พ.ศ.๒๕๓๒ พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงแปลเป็นภาษาอังกฤษ โดยรวบรวมพระราชดำรัสที่พระราชทานแก่คณะบุคคลที่เข้าเฝ้าถวายชัยมงคล เนื่องในโอกาสวันเฉลิมพระชนมพรรษาของทุกปี พระองค์ทรงเริ่มแปลพระราชดำรัสเรื่องน้ำและสิ่งแวดล้อม
 				</p>
 			</div>
@@ -145,7 +145,7 @@
 		<div class="h-section small paragraph" id="sec_6">
 			<div class="h-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
-					<strong>นอกจากนี้ยังทรงแปลและเรียบเรียงบทความ อีกหลายเรื่องด้วยกัน</strong><br>
+					<strong class="Srinakharinwirot" style="letter-spacing: 1px;font-size: 14pt;">นอกจากนี้ยังทรงแปลและเรียบเรียงบทความ อีกหลายเรื่องด้วยกัน</strong><br>
 					๑. ข่าวจากวิทยุเพื่อสันติภาพและความก้าวหน้า จาก Radio Peace and Progress ในนิตยสาร Intelligence Degest ฉบับลงวันที่ ๑ เมษายน ค.ศ. ๑๙๗๕ (พ.ศ. ๒๕๑๘)
 					<br>๒. การคืบหน้าของมาร์กศิสต์ จาก The Marxist Advance Special Brief
 					<br>๓. รายงานตามนโยบายคอมมิวนิสต์ จาก Following the Communist Line
@@ -169,7 +169,7 @@
 			</div>
 
 
-			<div class="h-innerContent">
+			<div class="h-innerContent setTextCenter">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					พระมหาชนกเป็นเรื่องหนึ่งในทศชาติชาดก อันเป็นชาดก ๑๐ ชาติสุดท้ายก่อนที่พระโพธิสัตว์จะมาประสูติเป็นเจ้าชายสิทธัตถะ และตรัสรู้เป็นพระสัมพุทธเจ้า ชาดกเรื่องนี้เป็นการบำเพ็ญเพียรบารมี พระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลเดชทรงสนพระราชหฤทัย เนื่องจากได้ทรงสดับพระธรรมเทศนาของสมเด็จพระมหาวีรวงศ์ แห่งวัดราชผาติการาม เมื่อปีพ.ศ.๒๕๒๐ เรื่องพระมหาชนกเสด็จทอดพระเนตรพระราชอุทยานในกรุงมิถิลา จึงทรงค้นคว้าเรื่องพระมหาชนกในพระไตรปิฎกเพิ่มเติม และทรงแปลเป็นภาษาอังกฤษตรงจากมหาชนกชาดกตั้งแต่ต้นเรื่อง โดยดัดแปลงเล็กน้อยจากพระสุตตันตปิฎกขุททกนิกายชาดก เล่มที่ ๔ ภาคที่ ๒ เพื่อให้เข้าใจง่ายขึ้น ทรงแปลพระมหาชนกชาดกเสร็จสมบูรณ์ เมื่อพ.ศ.๒๕๓๑ และโปรดเกล้าโปรดกระหม่อมให้จัดพิมพ์ในปีกาญจนาภิเษกทรงครองสิริราชสมบัติครบ ๕๐ ปี ในวันที่ ๒๘ มีนาคม ๒๕๓๙ และได้มีการพิมพ์เป็นฉบับการ์ตูน ในปีพ.ศ.๒๕๔๒
 				</p>
