--- a/artist.html
+++ b/artist.html
@@ -63,6 +63,8 @@
 			<i class="fa fa-chevron-circle-up lightGreen" style="font-size:48px"></i>
 		</a>
 	</div>
+
+	<p class="green Winter header setTextCenter setDisplay" id="artist_head" style="letter-spacing: 2px;padding-top: 100px;"><strong>ARTIST</strong></p>
 	
 	<div class="a-content a a-animate" id="a_content1">
 		<div class="a-img">
@@ -398,6 +400,7 @@
 				head_m4.classList.remove("setDisplay");
 				head_m4.classList.add("green");
 				toTop.classList.remove("setDisplay");
+				artist_head.classList.remove("setDisplay");
 			}
 		}
 
@@ -410,9 +413,11 @@
 				m2.classList.add("setDisplay");
 				m3.classList.add("setDisplay");
 				head_m4.classList.add("setDisplay");
+				artist_head.classList.add("setDisplay");
 				toTop.classList.add("setDisplay");
 			}else{
 				head_m4.classList.remove("setDisplay");
+				artist_head.classList.remove("setDisplay");
 				toTop.classList.remove("setDisplay");
 			}
 		}
