--- a/media.html
+++ b/media.html
@@ -57,12 +57,14 @@
 			<i class="fa fa-chevron-circle-up lightGreen" style="font-size:48px"></i>
 		</a>
 	</div>
-	
+
+	<p class="darkOrange Winter header setTextCenter setDisplay" id="media_head" style="letter-spacing: 2px;padding-top: 100px;"><strong>MEDIA</strong></p>
+
 	<div class="h-content m-1 animate media-1" id="m_content1">
-		<!-- <p class="darkOrange Winter header setTextCenter setDisplay displayFlex order-2" id="media_head" style="letter-spacing: 2px;"><strong>MEDIA</strong></p><hr> -->
-		<p class="darkOrange Srinakharinwirot header displayFlex order-1 setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">พระมหาชนกฉบับตีพิมพ์</p>
+		
+		<p class="darkOrange Srinakharinwirot header setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">พระมหาชนกฉบับตีพิมพ์</p>
 		<div class="h-section" id="sec_1">
-			<div class="img-left displayFlex order-1">
+			<div class="img-left">
 				<img src="img/media/book1.jpg" class="h_imgContent" id="h_img">
 			</div>
 			
@@ -211,7 +213,7 @@
 				head_m3.classList.remove("setDisplay");
 				head_m3.classList.add("darkOrange");
 				toTop.classList.remove("setDisplay");
-				// media_head.classList.remove("setDisplay");
+				media_head.classList.remove("setDisplay");
 			}
 		}
 
@@ -225,11 +227,11 @@
 				m4.classList.add("setDisplay");
 				head_m3.classList.add("setDisplay");
 				toTop.classList.add("setDisplay");
-				// media_head.classList.add("setDisplay");
+				media_head.classList.add("setDisplay");
 			}else{
 				head_m3.classList.remove("setDisplay");
 				toTop.classList.remove("setDisplay");
-				// media_head.classList.remove("setDisplay");
+				media_head.classList.remove("setDisplay");
 			}
 		}
 
