--- a/story.html
+++ b/story.html
@@ -69,6 +69,10 @@
 		</a>
 	</div>
 
+	<img src="img/story/head.png" class="boat setDisplay" id="boat_head">
+	<p class="lightGreen Winter header setTextCenter setDisplay" id="story_head" style="letter-spacing: 2px;"><strong>STORY</strong></p>
+
+
 	<div class="h-content animate" id="m_content1">
 		<p class="lightGreen Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">เนื้อเรื่อง<br>พระมหาชนก</p>
 		<img src="img/story/11.png" class="paragraph" id="img1">
@@ -140,6 +144,9 @@
 				head_m1.classList.remove("setDisplay");
 				head_m1.classList.add("lightGreen");
 				toTop.classList.remove("setDisplay");
+				story_head.classList.remove("setDisplay");
+				h_innerHead.classList.add("setDisplay");
+				boat_head.classList.remove("setDisplay");
 			}
 		}
 
@@ -152,9 +159,15 @@
 				m3.classList.add("setDisplay");
 				m4.classList.add("setDisplay");
 				toTop.classList.add("setDisplay");
+				story_head.classList.add("setDisplay");
+				h_innerHead.classList.remove("setDisplay");
+				boat_head.classList.add("setDisplay");
 			}else{
 				head_m2.classList.remove("setDisplay");
 				toTop.classList.remove("setDisplay");
+				h_innerHead.classList.add("setDisplay");
+				story_head.classList.remove("setDisplay");
+				boat_head.classList.remove("setDisplay");
 			}
 		}
 
