--- a/media.html
+++ b/media.html
@@ -78,7 +78,7 @@
 	</div>
 
 	<div class="h-content setDisplay m-1 animate" id="m_content2">
-		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">หนังสือการ์ตูนพระมหาชนก</p>
+		<p class="darkOrange Srinakharinwirot header setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">หนังสือการ์ตูนพระมหาชนก</p>
 		<div class="h-section" id="sec_1">
 			<div class="img-left">
 				<img src="img/media/book2.jpg" class="h_imgContent" id="h_img">
@@ -94,7 +94,7 @@
 	</div>
 
 	<div class="h-content setDisplay animate" id="m_content3">
-		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">แอนิเมชั่นพระมหาชนก</p>
+		<p class="darkOrange Srinakharinwirot header setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">แอนิเมชั่นพระมหาชนก</p>
 		<iframe width="90%" height="500" src="https://www.youtube.com/embed/XMBPsnacYWI?autoplay=0" allow="autoplay" frameborder="0" allowfullscreen id="video"></iframe>
 		<!-- allow="autoplay" -->
 		<div class="h-section" id="sec_1">
