--- a/media.html
+++ b/media.html
@@ -61,7 +61,7 @@
 	<div class="h-content m-1 animate media-1" id="m_content1">
 		<img src="img/media/book.png" class="boat">
 		<p class="darkOrange Winter header setTextCenter setDisplay" id="media_head" style="letter-spacing: 2px;padding: 20px;"><strong>MEDIA</strong></p>
-		<p class="darkOrange Srinakharinwirot header setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">พระมหาชนกฉบับตีพิมพ์</p>
+		<p class="darkOrange Srinakharinwirot header setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">พระมหาชนก<br>ฉบับตีพิมพ์</p>
 		<div class="h-section" id="sec_1">
 			<div class="img-left">
 				<img src="img/media/book1.jpg" class="h_imgContent" id="h_img">
@@ -79,7 +79,7 @@
 	<div class="h-content setDisplay m-1 animate" id="m_content2">
 		<img src="img/media/cartoon.png" class="boat">
 		<p class="darkOrange Winter header setTextCenter setDisplay" id="media_head2" style="letter-spacing: 2px;padding: 20px;"><strong>MEDIA</strong></p>
-		<p class="darkOrange Srinakharinwirot header setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">หนังสือการ์ตูนพระมหาชนก</p>
+		<p class="darkOrange Srinakharinwirot header setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">หนังสือการ์ตูน<br>พระมหาชนก</p>
 		<div class="h-section" id="sec_1">
 			<div class="img-left">
 				<img src="img/media/book2.jpg" class="h_imgContent" id="h_img">
@@ -97,7 +97,7 @@
 	<div class="h-content setDisplay animate" id="m_content3">
 		<img src="img/media/ani.png" class="boat">
 		<p class="darkOrange Winter header setTextCenter setDisplay" id="media_head3" style="letter-spacing: 2px;padding: 20px;"><strong>MEDIA</strong></p>
-		<p class="darkOrange Srinakharinwirot header setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">แอนิเมชั่นพระมหาชนก</p>
+		<p class="darkOrange Srinakharinwirot header setTextCenter" id="h_innerHead" style="letter-spacing: 2px;">แอนิเมชั่น<br>พระมหาชนก</p>
 		<iframe width="90%" height="500" src="https://www.youtube.com/embed/XMBPsnacYWI?autoplay=0" allow="autoplay" frameborder="0" allowfullscreen id="video"></iframe>
 		<!-- allow="autoplay" -->
 		<div class="h-section" id="sec_1">
